[gd_scene load_steps=4 format=2]

[ext_resource path="res://FPS.gd" type="Script" id=1]
[ext_resource path="res://playa.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]

[node name="Playa" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.64, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
far = 200.0

[node name="Interact_ray" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, -1, -12 )

[node name="look_pos" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.171626, -1.9839 )

[node name="pick_pos" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.180811, -2.07451 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="HUD"]
anchor_left = 0.92
anchor_right = 1.0
anchor_bottom = 0.073
margin_left = -0.52002
margin_top = 8.0
margin_right = -5.0
margin_bottom = 0.147995
script = ExtResource( 1 )

[node name="Interact_text" type="Label" parent="HUD"]
anchor_left = 0.391
anchor_top = 0.435
anchor_right = 0.596
anchor_bottom = 0.525
margin_left = 0.128967
margin_top = 0.059967
margin_right = -0.476013
margin_bottom = -0.100037
__meta__ = {
"_edit_use_anchors_": false
}
